--- a/laravel-vue-slack/package.json
+++ b/laravel-vue-slack/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@vue/compiler-sfc": "^3.2.30",
+        "emoji-mart-vue-fast": "^10.2.1",
         "vue": "^3.2.29",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.12"
